src/annotator/snapshots/jsonschema_annotator__annotator__yaml__tests__deeply_nested.snap
---
source: src/annotator/yaml.rs
expression: result
---
# Database
database:
  # Connection Settings
  connection:
    # Host
    # Database server hostname
    host: localhost
    # Port
    port: 5432
