src/annotator/snapshots/jsonschema_annotator__annotator__yaml__tests__include_default_value.snap
---
source: src/annotator/yaml.rs
expression: result
---
# Port
# The port number
# Default: 3000
port: 8080
