src/annotator/snapshots/jsonschema_annotator__annotator__yaml__tests__inline_values.snap
---
source: src/annotator/yaml.rs
expression: result
---
server:
  # Hostname
  host: localhost
  # Port Number
  port: 8080
  # Enabled
  # Whether the server is enabled
  enabled: true
