src/annotator/snapshots/jsonschema_annotator__annotator__yaml__tests__nested_mapping.snap
---
source: src/annotator/yaml.rs
expression: result
---
# Server Config
server:
  # Port
  # The port to listen on
  port: 8080
  # Host
  host: localhost
