src/annotator/snapshots/jsonschema_annotator__annotator__yaml__tests__skip_existing_comments.snap
---
source: src/annotator/yaml.rs
expression: result
---
# Existing comment
port: 8080
# Host
host: localhost
